# shaderplate

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile  compile.rst
docs/html/: annotated.html  bloom_8cpp.html  camera_8hpp.html  camera_8hpp_source.html  classCamera-members.html  classCamera.html  classDirectionalLight-members.html  classDirectionalLight.html  classFpsCamera-members.html  classFpsCamera.html  classLightSource-members.html  classLightSource.html  classMesh-members.html  classMesh.html  classModel-members.html  classModel.html  classPointLight-members.html  classPointLight.html  classShader-members.html  classShader.html  classes.html  compute01_8cpp.html  compute02_8cpp.html  compute3dEski_8cpp.html  compute3d_8cpp.html  dir_0733a68d48d34979a0b6566e1e2a6cba.html  dir_19afc55a409bd1b91bce47611b409d34.html  dir_52ebebf3495c499db91c6c71a465dc2f.html  dir_5dd65160827af56e6353642206b80129.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8a4d65c093de6225e01d8340ecce7ebf.html  dir_8f928c4249622cf166341d1fe2fef4a5.html  dir_a1b408f363210ed623827bc97dcc5185.html  dir_a3edc368492a91210cac89a23921e851.html  dir_acde8a1373d3945bfe7e600bbb94d01b.html  dir_ade0e4334c109d17e18d3a85a273985a.html  dir_c4b141b28466552b38acecdc87a1389f.html  dir_cba6fc45b6b5a31739b2955a91c645b3.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d9b2b64d1f484c20f5c308871c38b21b.html  (+107 more)
docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_15.html  all_15.js  all_16.html  all_16.js  all_17.html  all_17.js  all_18.html  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  (+156 more)
include/argparse/: argparse.hpp
include/custom/: camera.hpp  debug.hpp  external.hpp  light.hpp  model.hpp  mutils.hpp  renderer.hpp  shader.hpp  singulars.hpp  utils.hpp
include/glad/: glad.h
libs/assimp/: assimp
src/: glad.c  texture.cpp
src/argparse/: argibl.cpp  model.cpp
src/bloom/: bloom.cpp
src/defered/: defered.cpp
src/dirt/: dirt.cpp
src/fbo/: fbo.cpp
src/geometry/: geometry.cpp
src/heightmap/: phong.cpp
src/ibl/: ibl.cpp
src/lightprobs/: lightprobs.cpp  lightprobs2.cpp
src/parallax/: phong.cpp  phong2.cpp
src/pbr/: simplepbr.cpp  simplepbr2.cpp
src/phong/: phong.cpp  phong2.cpp  phongNoSpec.cpp
src/ply/: ply.cpp
src/raytrace/: compute3d.cpp  compute3dEski.cpp  simplecompute.cpp
src/screen/: screen.cpp  screenModel.cpp
src/shadowmap/: shadowmap.cpp
src/skybox/: sky.cpp
src/ssao/: ssao.cpp
src/ssbo/: phong.cpp
src/ubo/: phong.cpp
src/vct/: vct.cpp  vctutils.hpp
